ott auth
